# testing_exercises

./: .gitignore  pyproject.toml
functions/level_1/: three_url_builder.py
tests/level_1/: test_five_title.py  test_four_bank_parser.py  test_one_gender.py  test_three_url_builder.py  test_two_date_parser.py
